# middleware/router.go
@@ -2,10 +2,12 @@ package middleware
 
 import (
 	_ "conforme/docs"
+	sector "conforme/internal/Sector/handler"
 
 	"github.com/gin-gonic/gin"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
+	"conforme/db"
 )
 
 // @title
@@ -15,19 +17,32 @@ import (
 // @host localhost:8080
 // @BasePath /api
 func SetupRouter() *gin.Engine {
-	r := gin.Default()
+	// Set the Gin mode to release
+	gin.SetMode(gin.ReleaseMode)
 
-	r.POST("/add-questions")
+	// Create a new Gin engine
+	r := gin.New()
+
+	// Connect to the database
+	db.ConnectDatabase()
+	engine := db.Repo
+
+	r.Use(DBMiddleware(engine))
+
+	// Use the Logger and Recovery middleware
+	r.Use(gin.Logger())
+	r.Use(gin.Recovery())
+
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
-	r.Use(ResponseHandler())
-	//Use response, but not Token
+	// Routes without authentication
 	r.GET("/token", generateTokenHandler)
+	r.POST("/create-painels-test", sector.CreatePainelTest)
+	r.GET("/all-find-painel", sector.SearchAllTestPainel)
 
+	// Authenticated routes
 	auth := r.Group("/api")
 	auth.Use(authMiddleware)
-	//Response and token service
-	auth.PUT("/exemp")
 
 	return r
 }
